# hexlet_pytest

hexlet_pytest/: pyproject.toml
hexlet_pytest/tests/: test_example.py
