[tool.poetry]
name = "hexlet-pytest"
version = "0.1.0"
description = ""
authors = ["Nikolay Shved <viktor.vaskes44@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_pytest"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
